Minified version, readme and demo page updated.

--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
   <script>var shim = (function(){document.createElement('datalist');})();</script>
   <style>
     datalist {display:none;} /* just in case */
+	.datalist .selected {background-color: #ddddff;}
     input {width:200px;}
     h1 {font: bold 24px Helvetica, fantasy;}
   </style>
